tests/e2e/semantics/head_const_output9.error
Error: syntax error in story at line 3, column 16

3|            text = req.body["a"]["b"]
                     ^^^^^^^^^^^^^^^^^

E0104: `any` can't be indexed with `b` of type `string`
